<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?back_primary"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context=".presentation.fragment.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textColor="?label_primary"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/button_sunshine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_sunshine"
            app:tint="@color/yelow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always_bright"
            android:textColor="?label_primary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_night"
            app:tint="?label_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always_night"
            android:textColor="?label_primary" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_settings_system"
            app:tint="@color/color_light_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_the_system"
            android:textColor="?label_primary" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="?back_primary"
            android:src="@drawable/icon_leave"
            android:tint="?label_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="?label_primary"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
